...
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_date"
        android:text="Price"
        android:layout_alignLeft="@+id/detail_image"
        android:textColor="#FF0000"/>
    <Button
        android:id="@+id/detail_cartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_price"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Add to Cart"
        android:background="#f8f089"/>

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_cartButton"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
...
