...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".CartActivity">

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/cart_gridview"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_marginTop="20dp"
              android:numColumns="2"
              android:verticalSpacing="10dp"
              android:horizontalSpacing="10dp"
...
